alertmanager/alertmanager-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
  namespace: thanos
spec:
  routes:
    - match: Host(`alertmanager.cm.com`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
  tls:
    secretName: alertmanager-headless-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: thanos
spec:
  routes:
    - match: Host(`alertmanager.cm.com`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
